pre-attempt dynamic block sizing